--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,38 @@
-<p>login works!</p>
+<div>
+    <div id="login-form" [class.mat-elevation-z2]="true">
+        <a href=""></a>
+            <h1>Log In</h1>
+            <form [formGroup]="loginForm" (submit)="onLogin()">
+                <mat-form-field appearance="fill">
+                    <mat-label>Email Id</mat-label>
+                    <input matInput type="email" formControlName="email">
+                    <mat-error *ngIf="email?.errors?.['required']">
+                        Email is required.
+                    </mat-error>
+        
+                </mat-form-field>
+        
+                <mat-form-field >
+                    <mat-label>Password</mat-label>
+                    <input matInput type="password" formControlName="password">
+                    <mat-error *ngIf="password?.invalid">
+                        Password required
+                    </mat-error>
+                 
+                </mat-form-field>
+        
+                <button mat-raised-button color="primary" type="submit" [disabled]="!loginForm?.valid">Login</button>
+        
+        
+            </form>
+        
+            
+        </div>
+        <div id="register">
+            <p>Forgot Password?</p>
+            <p routerLink="/register">Create Account</p>
+        </div>
+
+</div>
+
+    
