Updated With Contact Us

--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -29,8 +29,8 @@
       <button mat-raised-button color="primary" id="btn1">Log In</button>
       <button mat-raised-button id="btn2">Sign Up</button>
     </mat-toolbar>
-
-    <app-home ></app-home>
+    <app-contact-us></app-contact-us>
+    <!-- <app-home ></app-home> -->
     <!-- Add Content Here -->
   </mat-sidenav-content> 
 </mat-sidenav-container>
