--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -1,18 +1,45 @@
 #top-bar{
     display: flex;
-    justify-content: space-between;
     padding-left: 2rem;
+    justify-content: flex-start;
+    text-align: center;
 }
 button{
     margin-right: 2rem;
-    background-color: aquamarine;
-    color: aliceblue;
+    /* background-color: aquamarine; */
+    color: blueviolet;
+}
+
+#project-container{
+    display: flex;
+    justify-content: space-around;
+}
+
+#projects-list{
+    background-color: rgb(248,248,248);
+    width: 18%;
+    height : 500px;
+    border-radius: 10px;
+    margin-left: 1rem;
+}
+#projects-list>div>p{
+    margin: 1rem;
+    font-size: larger;
 }
 
 #project-details{
-    background-color: lightgray;
-    border-radius: 10px;
+    background-color: #fff;
+    border-radius: 4px;
     height: 500px;
-    margin-left: 2rem;
-    margin-right: 2rem;
+    width: 88%;
+    margin-left: 1rem;
+    margin-right: 1rem;
 }
+
+  .app-sidenav-content {
+    display: flex;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+} 
+  
