--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,10 +1,48 @@
-<div id="main-container">
-    <div id="top-bar">
-        <h1>Projects</h1>
-        <button mat-button>Start new Project</button>
-    </div>
-    <div id="project-details">
-        
-    </div>
+<!-- sidenav bar -->
+<mat-sidenav-container class="app-container">
+    <mat-sidenav #sidenav mode="side" [class.mat-elevation-z4]="true" class="app-sidenav">
+        <mat-nav-list>
+            <mat-list-item (click)="openDialog()">
+                <mat-icon>create_new_folder</mat-icon><span>New Project</span>
+            </mat-list-item>
+            <mat-expansion-panel [class.mat-elevation-z0]="true">
+                <mat-expansion-panel-header>
+                    My Projects
+                </mat-expansion-panel-header>
+                <mat-nav-list *ngFor="let project of projectsList">
+                    <a mat-list-item (click)="showProjectDetails(project)">{{project?.name}}</a>
+                    
+                </mat-nav-list>
+            </mat-expansion-panel>
+            <mat-expansion-panel [class.mat-elevation-z0]="true">
+                <mat-expansion-panel-header>
+                    Assigned Projects
+                </mat-expansion-panel-header>
+                <mat-nav-list>
+                    <a mat-list-item routerLink="#">Spring</a>
+                    
+                </mat-nav-list>
+            </mat-expansion-panel>
+        </mat-nav-list>
+    </mat-sidenav>
+    <mat-sidenav-content>
+      <!-- content -->
+      <div id="main-container">
+    
+        <div id="top-bar">
+            <button mat-icon-button  (click)="sidenav.toggle()"><mat-icon>menu</mat-icon></button>
+            <h1>Projects</h1>            
+        </div>
 
-</div>
+        <div id="project-container">           
+            <div id="project-details">
+                <app-project-details [projectDetails] = "selectedProject"></app-project-details>            
+            </div>    
+        </div>     
+    
+    </div>  
+     
+    </mat-sidenav-content>
+</mat-sidenav-container>
+
+ 
