assigned project method added

--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -42,4 +42,15 @@ button{
     align-items: center;
     justify-content: center;
 } 
+
+.app-sidenav {
+    width: 270px;
+}
+.app-sidenav-content {
+    display: flex;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+} 
+
   
