delete assigen project added

--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -29,7 +29,7 @@
       <button mat-raised-button color="primary" id="btn1">Log In</button>
       <button mat-raised-button id="btn2">Sign Up</button>
     </mat-toolbar>
-    <app-contact-us></app-contact-us>
+    <!-- <app-contact-us></app-contact-us> -->
     <!-- <app-home ></app-home> -->
     <!-- Add Content Here -->
   </mat-sidenav-content> 
