Updated With Css

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -28,3 +28,7 @@
 <section id="section1">
     <h2>USERS rating from all over the World <br><mat-icon id="star">grade</mat-icon><mat-icon id="star">grade</mat-icon><mat-icon id="star">grade</mat-icon><mat-icon id="star">grade</mat-icon><mat-icon id="star">grade</mat-icon><span id="rating">  BASED ON +10,000 ratings</span></h2>
 </section>
+
+<footer>
+  <button><mat-icon>facebook</mat-icon></button>
+</footer>
