--- a/src/app/contact-us/contact-us.component.css
+++ b/src/app/contact-us/contact-us.component.css
@@ -7,9 +7,9 @@
     top: 250px;
     width: 900px;
     height: 550px;
-    left: 500px;
-    box-shadow: 1px 2px 8px 8px grey;
-    border-radius: 10px;
+    left: 600px;
+    border-radius: 20px;
+    background-color: orange;
 }
 
 h1{
@@ -23,7 +23,7 @@ h1{
 }
 
 #person{
-  width: 750px;
+  width: 850px;
   position: absolute;
   top: 350px;
   left: -150px;
