--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -3,20 +3,26 @@
 
 
 h1{
-    margin-top: 100px;
-    margin-left: 150px;
-    font-size: 60px;
-    font-weight: 900px;
-    font-family: 'Phudu', cursive;
-    letter-spacing: 0.2rem;
+  margin-top: 100px;
+  margin-left: 150px;
+  font-size: 60px;
+  font-weight: 900px;
+  font-family: 'Phudu', cursive;
+  letter-spacing: 0.2rem;
+}
+
+footer{
+  margin-top: 30px;
+  background-color: #212a37;
+  height: 50px;
 }
 
 h2{
-    margin-top: 50px;
-    margin-left: 150px;
-    font-size: 25px;
-    font-family: 'Phudu', cursive;
-    letter-spacing: 0.2rem;
+  margin-top: 50px;
+  margin-left: 150px;
+  font-size: 25px;
+  font-family: 'Phudu', cursive;
+  letter-spacing: 0.2rem;
 }
 
 video{
