--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,28 +1,77 @@
+
+
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Josefin+Sans:wght@600&family=Phudu:wght@600&family=Raleway:wght@900&family=Roboto+Mono:ital,wght@1,600&display=swap');
+
+
 form{
     width: 100%;
     display: flex;
     flex-direction: column;
     padding: 2%;
     align-items: center;
+    background-color: transparent;
     /* border: 1px solid gray; */
 }
 #login-form{
-    margin-top: 7%;
-    width: 40vw;
-    margin-left: 30%;
+    margin-top: 6%;
+    width: 550px;
+    height: 350px;
+    margin-left: 60%;
     text-align: center;
-    border-radius: 10px;
+    border-radius: 20px;
+    background-color: orange;
    
 }
 
+#img1{
+    position: absolute;
+    top: 20%;
+    width: 850px;
+}
+
+mat-label{
+    background-color: orange;
+}
+
+input{
+    background-color: orange;
+}
+
+mat-error{
+    font-size: 15px;
+    color: black;
+}
 mat-form-field{
     margin-top: 1rem;
     width: 80%;
+    background-color: orange;
 }
 
 h1{
+    margin-top: 70px;
+    margin-left: 62%;
+    font-size: 60px;
+    font-weight: 900px;
+    font-family: 'Phudu', cursive;
+    letter-spacing: 0.2rem;
+}
+
+h2{
+    font-size: 40px;
+    font-weight: 900px;
     padding-top: 1.5rem;
-    font-family:  'Bahnschrift SemiBold';
+    font-family: 'Phudu', cursive;
+}
+
+#btn{
+    position: absolute;
+    top: 350px;
+    left: 62%;
+    text-align: center;
+}
+
+#back{
+    margin-left: 5px;
 }
 
 #register{
@@ -41,4 +90,7 @@ h1{
 
 p{
     color: blue;
+    cursor: pointer;
+    margin-left: 250px;
+
 }
