--- a/src/app/nav-bar/nav-bar.component.css
+++ b/src/app/nav-bar/nav-bar.component.css
@@ -1,6 +1,7 @@
 .sidenav-container {
   background-image: url('../../assets/bg1.jpg');
   height: 100%;
+  background-repeat: no-repeat;
 }
 
 .sidenav {
