--- a/src/app/register/register.component.css
+++ b/src/app/register/register.component.css
@@ -1,3 +1,8 @@
+
+
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Josefin+Sans:wght@600&family=Phudu:wght@600&family=Raleway:wght@900&family=Roboto+Mono:ital,wght@1,600&display=swap');
+
+
 form{
    
     width: 100%;
@@ -8,21 +13,72 @@ form{
     
 }
 #register-form{
-    margin-top: 4%;
-    width: 40vw;
-    margin-left: 30%;
+    margin-top: 50px;
+    width: 550px;
+    height: 550px;
+    margin-left: 65%;
     text-align: center;
     border-radius: 8px;
-   
+    background-color: #fc8d28;
+    border-radius: 20px;
+    box-shadow: 1px 2px 4px 2px #fc8d28;
 }
+
+#register-form:hover{
+    box-shadow: 1px 2px 8px 2px black;
+}
+
+#google{
+    margin-top: 20px;
+}
+
 button{
     width: min-content;
 }
+
+mat-card{
+    width: 35%;
+    height: 80%;
+    margin-left: 50px;
+    margin-top: 30px;
+    border-radius: 20px;
+    background-color: cornsilk;
+}
+
+mat-error{
+    font-size: 15px;
+    color: black;
+}
+
 mat-form-field{
     margin-top: 1rem;
     width: 80%;
 }
-h1{
+h2{
     padding-top: 1.5rem;
-    font-family:  'Bahnschrift SemiBold';
+    font-family: 'Phudu', cursive;
+    font-weight: 900px;
+    font-size: 40px;
+
+}
+
+h1{
+    margin-top: -770px;
+    margin-left: 66%;
+    font-size: 60px;
+    font-weight: 900px;
+    font-family: 'Phudu', cursive;
+}
+
+h3{
+    font-weight: 900px;
+    font-family: 'Phudu', cursive;
+    font-size: 20px;
+    margin-top: 20px;
+}
+
+
+.card{
+    width: 350px;
+    height: 300px;
 }
