--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -36,10 +36,19 @@ button{
     margin-right: 1rem;
 }
 
-  .app-sidenav-content {
+.app-sidenav-content {
     display: flex;
     height: 100%;
     align-items: center;
     justify-content: center;
 } 
-  
+
+.app-sidenav {
+    width: 270px;
+}
+.app-sidenav-content {
+    display: flex;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+} 
