Updates on dashboard

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -30,7 +30,7 @@
       <div id="main-container">
     
         <div id="top-bar">
-            <button mat-icon-button  (click)="sidenav.toggle()"><mat-icon>menu</mat-icon></button>
+            <button mat-icon-button  (click)="sidenav.toggle()"><mat-icon>arrow_back_ios</mat-icon></button>
             <h1>Projects</h1>            
         </div>
 
