--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -23,7 +23,7 @@
                  
                 </mat-form-field>
         
-                <button mat-mini-fab color="primary" type="submit" [disabled]="!loginForm?.valid"><mat-icon>arrow_forward_ios</mat-icon></button>
+                <button mat-mini-fab color="primary" type="submit" [disabled]="!loginForm.valid"><mat-icon>arrow_forward_ios</mat-icon></button>
                 <div id="register">
                     <p>forgot Password?</p>
                 </div>
