--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -29,7 +29,7 @@
       <button mat-raised-button color="primary" id="btn1" (click)="login()">Log In</button>
       <button mat-raised-button id="btn2" routerLink="/register">Sign Up</button>
     </mat-toolbar>
-    <!-- <router-outlet></router-outlet> -->
+    <router-outlet></router-outlet>
     <!-- <app-home ></app-home> -->
     <!-- Add Content Here -->
   </mat-sidenav-content> 
