--- a/src/app/task-card/task-card.component.html
+++ b/src/app/task-card/task-card.component.html
@@ -2,8 +2,8 @@
     <div>
         
         <mat-card-header>
-          <mat-card-title>{{task?.name}}</mat-card-title>
-          <mat-card-subtitle>{{task?.description}}</mat-card-subtitle>
+          <mat-card-title>{{task.name}}</mat-card-title>
+          <mat-card-subtitle>{{task.description}}</mat-card-subtitle>
         </mat-card-header>
         <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
             <mat-icon>more_vert</mat-icon>
@@ -20,7 +20,7 @@
 
     </div>
         <mat-card-content>
-      <p>{{task?.priority}}</p>
+      <p>{{task.priority}}</p>
     </mat-card-content>
     <mat-card-actions>
         <mat-form-field appearance="outline">
