--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -14,7 +14,8 @@ h1{
 footer{
   margin-top: 30px;
   background-color: #212a37;
-  height: 50px;
+  height: 100px;
+  width: 100%;
 }
 
 h2{
@@ -183,8 +184,30 @@ video{
   }
 
   #rating{
-    color: #fa6501;
+    color: black;
   }
 
+  i{
+    color: orange;
+    font-size: 30px;
+  }
+
+  #ft_btn{
+    background-color: transparent;
+    margin-left: 40px;
+    border: none;
+     height: 100%;
+     width: 100px;
+  }
+
+  #logo{
+    background-color: transparent;
+    border: 0px;
+    margin-left: 350px;
+  }
+
+  img{
+    width: 150px;
+  }
 
 
