--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -26,9 +26,13 @@
 </section>
 
 <section id="section1">
-    <h2>USERS rating from all over the World <br><mat-icon id="star">grade</mat-icon><mat-icon id="star">grade</mat-icon><mat-icon id="star">grade</mat-icon><mat-icon id="star">grade</mat-icon><mat-icon id="star">grade</mat-icon><span id="rating">  BASED ON +10,000 ratings</span></h2>
+    <h2>USERS rating from all over the World <br><mat-icon id="star">grade</mat-icon><mat-icon id="star">grade</mat-icon><mat-icon id="star">grade</mat-icon><mat-icon id="star">grade</mat-icon><mat-icon id="star">grade</mat-icon><span id="rating"> +1000 ratings</span></h2>
 </section>
 
 <footer>
-  <button><mat-icon>facebook</mat-icon></button>
+  <button id="ft_btn"><i class="fa-brands fa-facebook"></i></button>
+  <button id="ft_btn"><i class="fa-brands fa-twitter"></i></button>
+  <button id="ft_btn"><i class="fa-brands fa-linkedin"></i></button>
+  <button id="ft_btn"><i class="fa-brands fa-github"></i></button>
+  <button id="logo"><img src="../../assets/FOKUS-02.png" alt="FOKUS"></button>
 </footer>
