--- a/src/app/task-board/task-board.component.css
+++ b/src/app/task-board/task-board.component.css
@@ -1,16 +1,45 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Josefin+Sans:wght@600&family=Phudu:wght@600&family=Raleway:wght@900&family=Roboto+Mono:ital,wght@1,600&display=swap');
+
+
+
 #task-container{
     width: 100%;
     display: flex;
     justify-content: space-evenly;
+    background-color: transparent;
+    
 }
 
 h1{
-    border : 1px solid orange;
+    color: #626062;
     border-radius: 10px;
     width: 100%;
     text-align: center;
+    font-family: "Phudu", cursive;
 }
 
 .task-status{
     width: 22%;
+}
+
+h1:active{
+    border-bottom: 1px solid orange;
+}
+
+h1:hover{
+    border-bottom: 2px solid orange;
+    border-radius: 0px;
+    color: #202021;
+}
+
+#done{
+    color: green;
+    margin-right: 10px;
+    padding-top: 2px;
+}
+
+mat-icon{
+    margin-right: 10px;
+    padding-top: 2px;
 }
