--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -29,7 +29,7 @@
     
         <div id="top-bar">
             <button mat-icon-button  (click)="sidenav.toggle()"><mat-icon>arrow_back_ios</mat-icon></button>
-            <h1>Projects</h1>            
+            <h1>Projects <button id="i" (click)="reload()"><i class="fa-solid fa-rotate-right"></i></button></h1>            
         </div>
 
         <div id="project-container">           
