--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -71,12 +71,12 @@ button{
 
 .app-sidenav {
     width: 270px;
-    background-color: #d170d5;
+    background-color: #f6f8fc;
     margin-left: 30px;
     height: 750px;
     margin-top: 80px;
     border-radius: 20px;
-    box-shadow: rgb(68, 0, 71) 0px 30px 60px -12px inset, rgba(204, 0, 255, 0.3) 0px 18px 36px -18px inset;
+    box-shadow: rgb(255, 187, 0, 0.267) 0px 30px 60px -12px inset, rgba(241, 117, 0) 0px 18px 36px -18px inset; 
 }
 .app-sidenav-content {
     display: flex;
@@ -118,5 +118,10 @@ mat-icon{
     padding-top: 4px;
 }
   
+#i{
+    margin-left: 10px;
+    border: 0;
+    background-color: transparent;
+}
 
 
