--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -19,7 +19,9 @@ form{
     margin-left: 60%;
     text-align: center;
     border-radius: 20px;
-    background-color: orange;
+    background-color: #f6f8fc;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+    /* box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px; */
    
 }
 
@@ -30,11 +32,11 @@ form{
 }
 
 mat-label{
-    background-color: orange;
+    background-color: f6f8fc;
 }
 
 input{
-    background-color: orange;
+    background-color: f6f8fc;
 }
 
 mat-error{
@@ -44,7 +46,7 @@ mat-error{
 mat-form-field{
     margin-top: 1rem;
     width: 80%;
-    background-color: orange;
+    background-color: f6f8fc;
 }
 
 h1{
