--- a/src/app/project-details/project-details.component.css
+++ b/src/app/project-details/project-details.component.css
@@ -4,7 +4,7 @@
 
 
 button{
-    background-color: orange;
+    background-color: #f6deb8;
 }
 
 #top-bar{
@@ -25,7 +25,7 @@ h1{
 #card{
     position: fixed;
     top: 180px;
-    right: 15px;
+    right: 40px;
     height: 750px;
     border-radius: 30px;
     background-color: transparent;
