--- a/src/app/contact-us/contact-us.component.css
+++ b/src/app/contact-us/contact-us.component.css
@@ -9,7 +9,7 @@
     height: 550px;
     left: 600px;
     border-radius: 20px;
-    background-color: orange;
+    background-color: rgb(248,248,248);
 }
 
 h1{
@@ -177,4 +177,56 @@ input.question:invalid ~ input[type="submit"], textarea.question:invalid ~ input
   100% {
     opacity: 1;
   }
+}
+
+#support{
+  padding: 1rem;
+  background-color: rgb(240, 237, 237);
+  border-top-right-radius: 20px;
+  border-top-left-radius: 20px;
+ 
+}
+
+form{
+  width: 100%;
+}
+
+form>mat-form-field{
+  width: 90%;
+  margin-left: .7rem;
+
+}
+form>button{
+  background-color: orange;
+  color: white;
+  margin-left: 2%;
+}
+#input-message{
+  margin-top: auto;
+  /* margin-bottom: 0rem; */
+}
+
+#sender>p{
+  width: fit-content;
+  max-width: 70%;
+  background-color: orange;
+  color: white;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  margin-left: auto;
+  margin-right: 1%;
+  padding: .5rem;
+  text-align: right;
+}
+#receiver>p{
+  width: fit-content;
+  max-width: 70%;
+  background-color: gray;
+  color: white;
+  border-top-right-radius: 10px;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  padding: .5rem;
+  
 }
