--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,9 +1,9 @@
 
 <h1>
-   One Web App to <br><br> FOCUS on all of <br><br> your PROJECTS.
-</h1><br>
+   One Web App to focus on all your projects.
+</h1>
 
-<h2>Collab With your Collegues. <br> <mat-icon id="icon">check_circle</mat-icon> Be_Productive <br><mat-icon id="icon">check_circle</mat-icon> be_fokused</h2>
+<h2>Collab With your collegues <br><mat-icon id="icon">check_circle</mat-icon> productivity <mat-icon id="icon">check_circle</mat-icon> task management</h2>
 
 <div>
    <video autoplay [muted]="true" loop src="../../assets/pm.mp4"></video>
@@ -17,23 +17,16 @@
     <label class="c-form__buttonLabel" for="checkbox">
       <button class="c-form__button" type="button">Send</button>
     </label>
-    <label class="c-form__toggle" for="checkbox" data-title="Get Started"></label>
+    <label class="c-form__toggle" for="checkbox" routerLink="/dashboard" data-title="Get Started"></label>
   </form>
 </div>
 
-<section>
+<!-- <section>
     <h2>Premium Products? <br> Coming Soon...</h2>
-</section>
+</section> -->
 
 <section id="section1">
-    <h2>USERS rating from all over the World <br><mat-icon id="star">grade</mat-icon><mat-icon id="star">grade</mat-icon><mat-icon id="star">grade</mat-icon><mat-icon id="star">grade</mat-icon><mat-icon id="star">grade</mat-icon><span id="rating"> +1000 ratings</span></h2>
+    <h3><mat-icon id="star">grade</mat-icon><mat-icon id="star">grade</mat-icon><mat-icon id="star">grade</mat-icon><mat-icon id="star">grade</mat-icon><mat-icon id="star">grade</mat-icon><span id="rating"> Based on 1000<mat-icon id="add">add</mat-icon> reviews</span></h3>
 </section>
 
-<footer class="d-flex">
-  <button id="ft_btn"><i class="fa-brands fa-facebook"></i></button>
-  <button id="ft_btn"><i class="fa-brands fa-twitter"></i></button>
-  <button id="ft_btn"><i class="fa-brands fa-linkedin"></i></button>
-  <button id="ft_btn"><i class="fa-brands fa-github"></i></button>
-  <button id="logo"><img src="../../assets/FOKUS-02.png" alt="FOKUS"></button>
-  <h3> &copy; 2023 FOKUS.All rights Reserved.</h3>
-</footer>
+
