--- a/src/app/project-details/project-details.component.html
+++ b/src/app/project-details/project-details.component.html
@@ -6,7 +6,7 @@
             <p>{{projectDetails.duration}} </p>
         </div>
         <mat-card id="card">
-          <mat-card-content>
+          <mat-card-content class="btn">
               
                 <button mat-fab (click)="taskDialog()">
                   <mat-icon>add</mat-icon>
