--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,6 +1,7 @@
-
-
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Josefin+Sans:wght@600&family=Phudu:wght@600&family=Raleway:wght@900&family=Roboto+Mono:ital,wght@1,600&display=swap');
+@font-face {
+    font-family: 'kanyon';
+    src: url(../../assets/fonts/Fontspring-DEMO-kanyonnr-boldit.otf);
+}
 
 
 form{
@@ -19,7 +20,7 @@ form{
     margin-left: 60%;
     text-align: center;
     border-radius: 20px;
-    background-color: #f6f8fc;
+    background-color: white;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
     /* box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px; */
    
@@ -28,7 +29,7 @@ form{
 #img1{
     position: absolute;
     top: 20%;
-    width: 850px;
+    width: 700px;
 }
 
 mat-label{
@@ -41,7 +42,7 @@ input{
 
 mat-error{
     font-size: 15px;
-    color: black;
+    color: red;
 }
 mat-form-field{
     margin-top: 1rem;
@@ -54,31 +55,31 @@ h1{
     margin-left: 62%;
     font-size: 60px;
     font-weight: 900px;
-    font-family: 'Phudu', cursive;
+    font-family: 'kanyon';
     letter-spacing: 0.2rem;
+    color: aliceblue;
 }
 
 h2{
     font-size: 40px;
     font-weight: 900px;
     padding-top: 1.5rem;
-    font-family: 'Phudu', cursive;
+    font-family: 'kanyon';
 }
 
 #btn{
-    position: absolute;
-    top: 350px;
-    left: 62%;
+    margin-top: -21rem;
+    margin-left: -32em;
     text-align: center;
 }
 
 #back{
-    margin-left: 5px;
+    margin-left: 5px; 
 }
 
 #register{
     width: 40vw;
-    margin-left: 30%;
+    margin-left: 25%;
     display: flex;
     justify-content: space-between;
     padding: .5rem;
@@ -90,9 +91,10 @@ h2{
     user-select: none;
 }
 
+
+
 p{
     color: blue;
     cursor: pointer;
     margin-left: 250px;
-
 }
