--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 <div>
     <img src="../../assets/kanban.png" alt="background" id="img1">
-    <h1>WELCOME BACK !</h1>
+    <!-- <h1>Welcome Back</h1> -->
     <div id="login-form" [class.mat-elevation-z2]="true">
         <a href=""></a>
             <h2>Login</h2>
@@ -23,11 +23,11 @@
                  
                 </mat-form-field>
         
-                <button mat-mini-fab color="primary" type="submit" [disabled]="!loginForm.valid"><mat-icon>arrow_forward_ios</mat-icon></button>
+                <button mat-mini-fab  color="warn" type="submit" [disabled]="!loginForm.valid"><mat-icon>arrow_forward_ios</mat-icon></button>
                 <div id="register">
-                    <p>forgot Password?</p>
+                    <p>Forgot Password?</p>
                 </div>
-                <button mat-mini-fab routerLink="/home" id="btn"><mat-icon id="back">arrow_back_ios</mat-icon></button>
+                <button mat-mini-fab color="warn" routerLink="/home" id="btn"><mat-icon id="back">arrow_back_ios</mat-icon></button>
     
             </form>
         
