--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,6 +1,6 @@
 
 
-<mat-sidenav-container class="sidenav-container">
+<mat-sidenav-container class="sidenav-container" >
   <mat-sidenav #drawer class="sidenav" fixedInViewport
       [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
       [mode]="(isHandset$ | async) ? 'over' : 'side'"
@@ -11,9 +11,10 @@
       <a mat-list-item href="#">Sign Up</a>
     </mat-nav-list>
   </mat-sidenav>
-  <mat-sidenav-content>
+  <mat-sidenav-content (scroll)="scrollFunc($event)">
    
-    <mat-toolbar id="navbar">
+    <mat-toolbar id="navbar" [ngClass]="toolbar_variable?'toolbar_change':'mat-toolbar'" >
+    <div>
       <button
         type="button"
         aria-label="Toggle sidenav"
@@ -24,16 +25,25 @@
       </button>
    
       <span><button id="logo"><img src="../../assets/FOKUS-01.png" alt="" routerLink="/home"></button></span>
+
+    </div>
+      
+    <div id="nav-btns">
+      <button  mat-flat-button [ngClass]="toolbar_variable?'btn_change':'btn_original'"  routerLink="/contact" [hidden]="isAdmin">Contact Us</button>
+      <button  mat-flat-button [ngClass]="toolbar_variable?'btn_change':'btn_original'" routerLink="/support" [hidden]="!isAdmin" >Support</button>
+      <button mat-raised-button color="primary" [ngClass]="toolbar_variable?'btn_login_change': 'btn_login'" (click)="logout()" [hidden]="!isLoggedIn">Log Out</button>
+      <button mat-raised-button color="primary" [ngClass]="toolbar_variable?'btn_login_change':'btn_login'" (click)="login()" [hidden]="isLoggedIn">Log in</button>
+      <button mat-raised-button id="btn2" [ngClass]="toolbar_variable?'btn_signup_change':'btn_signup'" routerLink="/register" [hidden]="isLoggedIn">Sign Up</button>
+    </div>
    
-      <button  mat-flat-button id="btn" routerLink="/contact" [hidden]="isAdmin">Contact Us</button>
-      <button  mat-flat-button id="btn" routerLink="/support" [hidden]="!isAdmin" >Support</button>
-      <button mat-raised-button color="primary" id="btn1" (click)="logout()" [hidden]="!isLoggedIn">Log Out</button>
-      <button mat-raised-button color="primary" id="btn1" (click)="login()" [hidden]="isLoggedIn">Log In</button>
-      <button mat-raised-button id="btn2" routerLink="/register" [hidden]="isLoggedIn">Sign Up</button>
+      
     </mat-toolbar>
-    <router-outlet></router-outlet>
-    <!-- <app-home ></app-home> -->
-    <!-- Add Content Here -->
+  
+      <router-outlet ></router-outlet>
+      
+    
   </mat-sidenav-content> 
+ 
+  
 </mat-sidenav-container>
 
