--- a/src/app/project-details/project-details.component.css
+++ b/src/app/project-details/project-details.component.css
@@ -1,6 +1,7 @@
-
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Josefin+Sans:wght@600&family=Phudu:wght@600&family=Raleway:wght@900&family=Roboto+Mono:ital,wght@1,600&display=swap');
-
+@font-face {
+    font-family: 'kanyon';
+    src: url('../../assets/fonts/Fontspring-DEMO-kanyon-boldit.otf');
+}
 
 
 button{
@@ -17,18 +18,30 @@ mat-card{
     background-color: transparent;
 }
 
+.btn{
+    display: flex;
+    height: min-content;
+    justify-content: space-between;
+}
+
 h1{
-    font-family: "Phudu", cursive;
+    font-family: 'kanyon';
     font-weight: 900px;
 }
 
 #card{
-    position: fixed;
-    top: 180px;
-    right: 40px;
-    height: 750px;
+    width: 20rem;
+    height: 5.5rem;
     border-radius: 30px;
     background-color: transparent;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
 }
 
+::ng-deep .mat-tab-list .mat-tab-labels {
+    color:blue;
+    background-color: yellow;
+}
+    ::ng-deep .mat-tab-list .mat-tab-labels .mat-tab-label-active {
+        color:red;
+        background-color: green;
+        }    
