--- a/src/app/register/register.component.css
+++ b/src/app/register/register.component.css
@@ -1,7 +1,7 @@
-
-
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Josefin+Sans:wght@600&family=Phudu:wght@600&family=Raleway:wght@900&family=Roboto+Mono:ital,wght@1,600&display=swap');
-
+@font-face {
+    font-family: 'kanyon';
+    src: url(../../assets/fonts/Fontspring-DEMO-kanyonnr-boldit.otf);
+}
 
 form{
    
@@ -19,9 +19,10 @@ form{
     margin-left: 65%;
     text-align: center;
     border-radius: 8px;
-    background-color: #fc8d28;
     border-radius: 20px;
-    box-shadow: 1px 2px 4px 2px #fc8d28;
+    /* box-shadow: 1px 2px 4px 2px #fc8d28; */
+    background-color: white;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
 }
 
 #register-form:hover{
@@ -56,23 +57,24 @@ mat-form-field{
 }
 h2{
     padding-top: 1.5rem;
-    font-family: 'Phudu', cursive;
+    font-family: 'kanyon';
     font-weight: 900px;
     font-size: 40px;
 
 }
 
 h1{
-    margin-top: -770px;
+    margin-top: -670px;
     margin-left: 66%;
     font-size: 60px;
     font-weight: 900px;
-    font-family: 'Phudu', cursive;
+    font-family: 'kanyon';
+    color: white;
 }
 
 h3{
     font-weight: 900px;
-    font-family: 'Phudu', cursive;
+    font-family: 'kanyon';
     font-size: 20px;
     margin-top: 20px;
 }
