forget-password-section done

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -24,7 +24,7 @@
                 </mat-form-field>
         
                 <button mat-mini-fab color="primary" type="submit" [disabled]="!loginForm.valid"><mat-icon>arrow_forward_ios</mat-icon></button>
-                <div id="register">
+                <div id="register" routerLink="/forgetPassword">
                     <p>forgot Password?</p>
                 </div>
                 <button mat-mini-fab routerLink="/home" id="btn"><mat-icon id="back">arrow_back_ios</mat-icon></button>
