--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -24,7 +24,7 @@
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
    
-      <span><button id="logo"><img src="../../assets/FOKUS-01.png" alt="" routerLink="/home"></button></span>
+      <span><button id="logo"><img id="logo" src="../../assets/Fokus-05.png" alt="" routerLink="/home"></button></span>
 
     </div>
       
