--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -1,5 +1,5 @@
 #dashboard{
-    background-color: #fff;
+    background-color: rgba(247,246,245);
 }
 .app-container{
     width: 100vw;
@@ -17,6 +17,12 @@
     src: url('../../assets/fonts/Fontspring-DEMO-kanyon-bold.otf');
 }
 
+
+
+#main-container{
+    background-color: rgba(247,246,245);
+
+}
 #top-bar{
     display: flex;
     padding-left: 2rem;
@@ -25,6 +31,8 @@
     background-color: transparent;
     position: fixed;
     top: 102px;  
+    z-index: 1;
+   
 }
 
 
@@ -32,6 +40,8 @@ h1{
     font-family: 'Kanyon-bold' ;
     font-weight: 900px;
     font-size: 40px;
+    color: rgb(56, 56, 56);
+    padding-top: 3%;
 }
 button{
     margin-right: 2rem;
@@ -40,10 +50,11 @@ button{
 }
 
 #project-container{
-    display: flex;
-    justify-content: space-around;
+    /* display: flex;
+    justify-content: space-around; */
     margin-top: 40px;
-    height: 850px;
+    height: 900px;
+    margin-bottom: 40px;
     width: 100%;
     border-radius: 10px;
     
@@ -54,7 +65,7 @@ button{
 }
 
 #projects-list{
-    background-color: rgb(248,248,248);
+    /* background-color: rgb(248,248,248); */
     width: 18%;
     height : 500px;
     border-radius: 10px;
@@ -66,11 +77,13 @@ button{
 }
 
 #project-details{
-    /* background-color: #fff; */
+    /* background-color: rgba(247,246,245); */
+    position: absolute;
+    margin-top: 300px;
     border-radius: 4px;
     height: 750px;
     width: 94%;
-    margin-left: -40px;
+    margin-left: 30px;
     margin-right: .5rem;
     border-radius: 10px;
     margin-top: 15px;
@@ -89,10 +102,9 @@ button{
 
 .app-sidenav {
     width: 270px;
-    /* background-color: #f6f8fc; */
-    /* margin-left: 30px; */
-    height: 100vh;
-    margin-top: 30px;
+    position: fixed;
+    /* height: 100vh; */
+    margin-top: 99px;
     border-top-right-radius: 8px;
     /* box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px; */
 
