--- a/src/app/project-details/project-details.component.css
+++ b/src/app/project-details/project-details.component.css
@@ -1,6 +1,6 @@
 @font-face {
-    font-family: 'kanyon';
-    src: url('../../assets/fonts/Fontspring-DEMO-kanyon-boldit.otf');
+    font-family: 'kanyonj';
+    src: url('../../assets/fonts/Fontspring-DEMO-kanyon-black.otf');
 }
 
 
@@ -12,11 +12,27 @@ button{
     display: flex;
     justify-content: space-between;
     padding: 2rem;
+    background-color: white;
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
 }
 
 mat-card{
-    background-color: transparent;
+    background-color: white;
 }
+
+mat-tab-group{
+    background-color: #f6deb8;
+   /* box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset; */
+}
+/* ::ng-deep .mat-tab-label
+{
+  height: 27px !important;
+  min-height: 5px!important;
+  margin: 3px!important;
+  width: 90px!important;
+  min-width: 5px!important;
+} */
 
 .btn{
     display: flex;
@@ -24,9 +40,10 @@ mat-card{
     justify-content: space-between;
 }
 
-h1{
-    font-family: 'kanyon';
-    font-weight: 900px;
+div>h1{
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-weight: bold;
+    font-size: 60px;
 }
 
 #card{
@@ -34,14 +51,10 @@ h1{
     height: 5.5rem;
     border-radius: 30px;
     background-color: transparent;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+    box-shadow: rgba(50, 50, 93, 0.116) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.0) 0px 18px 36px -18px inset;
+}
+mat-card-content{
+    /* background-color: rgba(247,246,245); */
 }
 
-::ng-deep .mat-tab-list .mat-tab-labels {
-    color:blue;
-    background-color: yellow;
-}
-    ::ng-deep .mat-tab-list .mat-tab-labels .mat-tab-label-active {
-        color:red;
-        background-color: green;
-        }    
+
