--- a/src/app/reset-pass/reset-pass.component.html
+++ b/src/app/reset-pass/reset-pass.component.html
@@ -4,9 +4,9 @@
         <a href=""></a>
             <h2>Reset Password</h2>
             <div *ngIf="!validity">
-                <h2>Link Expaired</h2>
+                <h2>Link has been Expired</h2>
                 <p>
-                    Go back to forgetPassword page and re-send the link..!!!
+                    Go back to Forgot Password page and re-send the link..!!!
                 </p>
             </div>
             <div class="success_gif" *ngIf="validitySuccess">
@@ -19,7 +19,7 @@
                 </mat-form-field>
         
                 <mat-form-field appearance="outline" >
-                    <mat-label>Conform Password</mat-label>
+                    <mat-label>Confirm Password</mat-label>
                     <input matInput type="password" name="confirm_password" formControlName="confirm_password">
                 </mat-form-field>
                 <button mat-raised-button type="submit" [disabled]="!formPass.valid">Submit</button>
