--- a/src/app/task-board/task-board.component.css
+++ b/src/app/task-board/task-board.component.css
@@ -1,13 +1,15 @@
-
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Josefin+Sans:wght@600&family=Phudu:wght@600&family=Raleway:wght@900&family=Roboto+Mono:ital,wght@1,600&display=swap');
-
-
+@font-face {
+    font-family: 'Kanyon';
+    src: url('../../assets/fonts/Fontspring-DEMO-kanyonnr-regular.otf');
+}
 
 #task-container{
     width: 100%;
     display: flex;
     justify-content: space-evenly;
-    background-color: transparent;
+    /* background-color: rgba(247,246,245); */
+    background-color: white;
+  
     
 }
 
@@ -15,12 +17,16 @@ h1{
     color: #626062;
     border-radius: 10px;
     width: 100%;
+    font-weight: bold;
     text-align: center;
-    font-family: "Phudu", cursive;
+    font-family: "kanyon";
 }
 
 .task-status{
     width: 22%;
+    margin-left: 1%;
+    margin-right: 1%;
+    
 }
 
 
@@ -43,4 +49,13 @@ h1:hover{
 mat-icon{
     margin-right: 10px;
     padding-top: 2px;
+}
+
+#non-responsive{
+    pointer-events: none;
+}
+
+.task-status{
+    height: 600px;
+    overflow-y: auto;
 }
