--- a/src/app/task-card/task-card.component.css
+++ b/src/app/task-card/task-card.component.css
@@ -1,7 +1,57 @@
 .task-card{
-    margin : 0rem 0rem .3rem;
+    margin : .4rem;
+    /* background-color: rgba(247,246,245); */
+    border-radius: 10px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 div{
     display: flex;
     justify-content: space-between;
+}
+mat-card-title{
+    font-weight: bold;
+}
+mat-card-subtitle{
+    color: gray;
+    
+}
+
+mat-progress-bar{
+    background-color: #FF6600;
+}
+
+mat-select{
+  /* background-color: #f9f9f9; */
+  margin: 5%;
+  background-color: white;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  padding: 12px 16px;
+}
+
+#Low{
+    color: green;
+    border: 2px solid green;
+    padding: 3px 5px 3px 5px;
+    border-radius: 8px;
+    width: min-content;
+    margin : 4px;
+}
+
+#Moderate{
+color: #FFBF00;
+border: 2px solid #FFBF00;
+    padding: 3px 5px 3px 5px;
+    border-radius: 8px;
+    width: min-content;
+    margin : 4px;
+}
+#High{
+    color: red;
+    border: 2px solid red;
+    padding: 3px 5px 3px 5px;
+    border-radius: 8px;
+    width: min-content;
+    margin : 4px;
+    
 }
