--- a/src/app/task-card/task-card.component.html
+++ b/src/app/task-card/task-card.component.html
@@ -1,4 +1,4 @@
-<mat-card class="task-card">
+<mat-card class="task-card" >
     <div>
         
         <mat-card-header>
@@ -16,18 +16,20 @@
             </button>
           </mat-menu>
     
-    
-
     </div>
         <mat-card-content>
-      <p>{{task.priority}}</p>
+      <p  id='{{task.priority}}' >{{task.priority}}</p>
     </mat-card-content>
     <mat-card-actions>
-        <mat-form-field appearance="outline">
-            <mat-label>Change Status</mat-label>
+      
+            <!-- <mat-label>Change Status</mat-label> -->
             <mat-select  name="status" [(ngModel)]="task.status" #status="ngModel" (selectionChange)="changeStatus(task)" >
             <mat-option *ngFor= "let status of statuses" [value]="status">{{status}}</mat-option>
         </mat-select>
-    </mat-form-field>
+ 
+    
     </mat-card-actions>
+    <mat-card-footer>
+      <mat-progress-bar mode="buffer"></mat-progress-bar>
+    </mat-card-footer>
   </mat-card>
